syntax = "proto3";
package video;
option go_package = "videorpc";

message User {
    int64 user_id = 1;
    string username = 2;
    int64 follow_count = 3;
    int64 follower_count = 4;
    bool is_follow = 5;
}

message Video {
    int64 video_id = 1;
    User author = 2;
    string play_url = 3;
    string cover_url = 4;
    int64 favorite_count = 5;
    int64 comment_count = 6;
    bool is_favorite = 7;
    string title = 8;
}

message CreateVideoRequest {
    int64 user_id = 1;
    string play_url = 2;
    string cover_url = 3;
    string title = 4;
}

message CreateVideoResponse {
    int32 status_code = 1;
    string status_message = 2;
}

message QueryVideoByUserIdRequest {
    int64 user_id = 1;
}

message QueryVideoByUserIdResponse {
    int32 status_code = 1;
    string status_message = 2;
    repeated Video videos = 3;
}


service VideoService {
    rpc CreateVideo (CreateVideoRequest) returns (CreateVideoResponse) {}
    rpc QueryVideoByUserId (QueryVideoByUserIdRequest) returns (QueryVideoByUserIdResponse) {}
}